--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
         <li class="item">
             <a href="pets.html">Pets</a>
         </li>
+
+        <li class="item">
+            <a href="herps.html">Herps</a>
+        </li>
+
     </body>
 </html> 
